[package]
name = "thiserror-impl"
version = "1.0.9"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Implementation detail of the `thiserror` crate"
repository = "https://github.com/dtolnay/thiserror"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "NexTokenTech/thiserror-sgx" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.11"
